initialize DVC remote

--- a/.dvc/config
+++ b/.dvc/config
@@ -1,4 +1,6 @@
 [core]
-    remote = remote
+    remote = mys3remote
 ['remote "remote"']
     url = gdrive://1dvatsOKrz_EWI794ApRLZgxVFtRkATEu?usp=drive_link
+['remote "mys3remote"']
+    url = ../arn:aws:s3:::model-experiment
