--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,12 +15,12 @@ jobs:
       #   with:
       #     python-version: '3.x'
       - uses: iterative/setup-cml@v1
-      - name: Train model
+      - name: check model
         run: |
           # Your ML workflow goes here
           pip install -r requirements.txt
-          python etl_pipeline.py
-          python train_pipeline
+          python tests.py
+          
       - name: Write CML report
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
