--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,10 @@
 /data/clean
 /data/database
 /data/raw
+/data/test
+data/real_time_data/ 
+data/real_time_data/attributes 
+data/real_time_data/targets
 
 __pycache__
 /arn:aws:s3:::model-experiment
